TS-252: fix 2 issues with the cache inspector. One is a fix for StatPages and the other is a fix in the Cache scan routines. However, there is still in issue in URL.cc (TS-253).

git-svn-id: https://svn.apache.org/repos/asf/incubator/trafficserver/traffic/trunk@925018 13f79535-47bb-0310-9956-ffa450edef68